<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="Car">
        <SwitchPreferenceCompat
            app:key="@string/use_specified_car_key"
            app:summary="Use the below settings for car mode"
            app:title="Use specified car" />
        <ListPreference
            android:defaultValue="@string/specified_car_size_default"
            android:entries="@array/car_sizes"
            android:entryValues="@array/car_sizes"
            android:key="@string/specified_car_size_key"
            android:title="Car size" />
        <ListPreference
            android:defaultValue="@string/specified_car_fuel_default"
            android:entries="@array/car_fuels"
            android:entryValues="@array/car_fuels"
            android:key="@string/specified_car_fuel_key"
            android:title="Car fuel type" />
    </PreferenceCategory>
</PreferenceScreen>
